Fix Module Federation configuration and integrate design system with PrimeNG
- Disable strictVersion in module-federation.config.ts for all remotes (Auth, Finance, HR, Supply) and shell to allow flexible version resolution
- Remove shell:serve dependency from all remote project.json serve targets
- Fix tsconfig.json extends path from ../tsconfig.base.json to ../../tsconfig.base.json in all remotes
- Configure shell webpack to disable import.meta parsing to fix Tailwind CSS compatibility
- Update

--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -26,7 +26,9 @@
         "scripts": [],
         "customWebpackConfig": {
           "path": "apps/shell/webpack.config.ts"
-        }
+        },
+        "optimization": false,
+        "sourceMap": true
       },
       "configurations": {
         "production": {
@@ -54,7 +56,7 @@
     },
     "serve": {
       "continuous": true,
-      "executor": "@angular/build:dev-server",
+      "executor": "@nx/angular:dev-server",
       "configurations": {
         "production": {
           "buildTarget": "shell:build:production"
@@ -63,7 +65,11 @@
           "buildTarget": "shell:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 4200,
+        "publicHost": "http://localhost:4200"
+      }
     },
     "lint": {
       "executor": "@nx/eslint:lint"
