--- a/apps/remote-finance/project.json
+++ b/apps/remote-finance/project.json
@@ -71,8 +71,7 @@
           "buildTarget": "remoteFinance:build:development"
         }
       },
-      "defaultConfiguration": "development",
-      "dependsOn": ["shell:serve"]
+      "defaultConfiguration": "development"
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
