--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/animations": "^21.0.8",
     "@angular/common": "~21.0.0",
     "@angular/compiler": "~21.0.0",
     "@angular/core": "~21.0.0",
@@ -12,7 +13,11 @@
     "@angular/platform-browser": "~21.0.0",
     "@angular/router": "~21.0.0",
     "@module-federation/enhanced": "^0.21.2",
-    "rxjs": "~7.8.0"
+    "@primeng/themes": "^21.0.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.0.2",
+    "rxjs": "~7.8.0",
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "~2.1.2",
@@ -40,14 +45,12 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@tailwindcss/forms": "^0.5.11",
-    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
     "@vitest/coverage-v8": "^4.0.0",
     "@vitest/ui": "^4.0.8",
     "angular-eslint": "^21.0.1",
-    "autoprefixer": "^10.4.23",
+    "autoprefixer": "^10.4.20",
     "cypress": "^15.8.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -56,10 +59,10 @@
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~21.0.0",
     "nx": "22.3.3",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.49",
     "postcss-url": "~10.1.3",
     "prettier": "~3.6.2",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
