Update README progress and refactor Module Federation configs to use centralized factory
- Update README to reflect 95% completion with comprehensive design system applied
- Refactor all remote Module Federation configs (Auth, Finance, HR, Supply) to use createRemoteConfig factory from @erp/shared/config
- Add provideAnimationsAsync and MessageService providers to all remote app configs
- Update Auth login component to use centralized constants (BRAND, DEMO_CREDENTIALS, LENGTH_CONSTRAINTS)
- Integrate

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,6 +30,7 @@
       "@erp/shared/ui": ["libs/shared/ui/src/index.ts"],
       "@erp/shared/utils": ["libs/shared/utils/src/index.ts"],
       "@erp/shared/models": ["libs/shared/models/src/index.ts"],
+      "@erp/shared/config": ["libs/shared/config/src/index.ts"],
       "@erp/auth/feature-login": ["libs/auth/feature-login/src/index.ts"],
       "@erp/auth/data-access": ["libs/auth/data-access/src/index.ts"],
       "@erp/shared/theme": ["libs/shared/theme/src/index.ts"]
