feat: Add Module Federation dev server targets and dynamic remote loading with fallback handling
- Add serve-mf targets to all remote applications (Auth, Finance, HR, Supply) with dedicated ports (4201-4204) and publicHost configuration
- Add serve-mf target to shell application on port 4200
- Configure shell to copy module-federation.manifest.json to assets during build
- Refactor shell routing to use loadRemoteModule() instead of static imports for all remotes (Auth, Finance, HR, Supply)
- Add remote

--- a/apps/remote-auth/project.json
+++ b/apps/remote-auth/project.json
@@ -73,6 +73,22 @@
       },
       "defaultConfiguration": "development"
     },
+    "serve-mf": {
+      "executor": "@nx/angular:module-federation-dev-server",
+      "configurations": {
+        "production": {
+          "buildTarget": "remoteAuth:build:production"
+        },
+        "development": {
+          "buildTarget": "remoteAuth:build:development"
+        }
+      },
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 4201,
+        "publicHost": "http://localhost:4201"
+      }
+    },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
