--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/forms": "~21.0.0",
     "@angular/platform-browser": "~21.0.0",
     "@angular/router": "~21.0.0",
+    "@jsverse/transloco": "^8.2.0",
     "@module-federation/enhanced": "^0.21.2",
     "@primeng/themes": "^21.0.2",
     "primeicons": "^7.0.0",
