--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,10 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
@@ -27,22 +30,50 @@
       "remoteSupply/Routes": [
         "apps/remote-supply/src/app/remote-entry/entry.routes.ts"
       ],
-      "@erp/shared/ui": ["libs/shared/ui/src/index.ts"],
-      "@erp/shared/utils": ["libs/shared/utils/src/index.ts"],
-      "@erp/shared/models": ["libs/shared/models/src/index.ts"],
-      "@erp/shared/config": ["libs/shared/config/src/index.ts"],
-      "@erp/auth/feature-login": ["libs/auth/feature-login/src/index.ts"],
-      "@erp/auth/data-access": ["libs/auth/data-access/src/index.ts"],
-      "@erp/shared/theme": ["libs/shared/theme/src/index.ts"],
-      "remotePm/Routes": ["apps/remotePm/src/app/remote-entry/entry.routes.ts"],
-      "remotePm/Manifest": ["apps/remotePm/src/app/remote-entry/manifest.ts"],
-      "remoteSrm/Routes": ["apps/remote-srm/src/app/remote-entry/entry.routes.ts"],
-      "remoteSrm/Manifest": ["apps/remote-srm/src/app/remote-entry/manifest.ts"],
+      "@erp/shared/ui": [
+        "libs/shared/ui/src/index.ts"
+      ],
+      "@erp/shared/utils": [
+        "libs/shared/utils/src/index.ts"
+      ],
+      "@erp/shared/models": [
+        "libs/shared/models/src/index.ts"
+      ],
+      "@erp/shared/config": [
+        "libs/shared/config/src/index.ts"
+      ],
+      "@erp/auth/feature-login": [
+        "libs/auth/feature-login/src/index.ts"
+      ],
+      "@erp/auth/data-access": [
+        "libs/auth/data-access/src/index.ts"
+      ],
+      "@erp/shared/theme": [
+        "libs/shared/theme/src/index.ts"
+      ],
+      "remotePm/Routes": [
+        "apps/remotePm/src/app/remote-entry/entry.routes.ts"
+      ],
+      "remotePm/Manifest": [
+        "apps/remotePm/src/app/remote-entry/manifest.ts"
+      ],
+      "remoteSrm/Routes": [
+        "apps/remote-srm/src/app/remote-entry/entry.routes.ts"
+      ],
+      "remoteSrm/Manifest": [
+        "apps/remote-srm/src/app/remote-entry/manifest.ts"
+      ],
       "remoteWarehouses/Routes": [
         "apps/remote-warehouses/src/app/remote-entry/entry.routes.ts"
       ],
       "remoteWarehouses/Manifest": [
         "apps/remote-warehouses/src/app/remote-entry/manifest.ts"
+      ],
+      "@erp/shared/util-state": [
+        "libs/shared/util-state/src/index.ts"
+      ],
+      "@erp/shared/util-i18n": [
+        "libs/shared/util-i18n/src/index.ts"
       ]
     },
     "strict": true,
@@ -52,5 +83,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
