feat: Introduce language switching functionality with a new shared state utility, UI component, and integration into the profile dropdown.

--- a/libs/shared/ui/tsconfig.json
+++ b/libs/shared/ui/tsconfig.json
@@ -7,7 +7,7 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "emitDecoratorMetadata": false,
-    "module": "preserve"
+    "module": "esnext"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
