--- a/libs/shared/util-state/project.json
+++ b/libs/shared/util-state/project.json
@@ -9,6 +9,21 @@
     "scope:shared"
   ],
   "targets": {
+    "build": {
+      "executor": "@nx/angular:ng-packagr-lite",
+      "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
+      "options": {
+        "project": "libs/shared/util-state/ng-package.json",
+        "tsConfig": "libs/shared/util-state/tsconfig.lib.json"
+      },
+      "configurations": {
+        "production": {
+          "tsConfig": "libs/shared/util-state/tsconfig.lib.prod.json"
+        },
+        "development": {}
+      },
+      "defaultConfiguration": "production"
+    },
     "test": {
       "executor": "@nx/vitest:test",
       "outputs": [
