feat: Add tsconfig.json for the shell application.

--- a/apps/shell/tsconfig.json
+++ b/apps/shell/tsconfig.json
@@ -10,7 +10,7 @@
     "target": "es2022",
     "moduleResolution": "bundler",
     "emitDecoratorMetadata": false,
-    "module": "preserve"
+    "module": "esnext"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
