--- a/libs/shared/data-access/project.json
+++ b/libs/shared/data-access/project.json
@@ -6,6 +6,21 @@
   "projectType": "library",
   "tags": ["scope:shared", "type:data-access"],
   "targets": {
+    "build": {
+      "executor": "@nx/angular:ng-packagr-lite",
+      "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
+      "options": {
+        "project": "libs/shared/data-access/ng-package.json",
+        "tsConfig": "libs/shared/data-access/tsconfig.lib.json"
+      },
+      "configurations": {
+        "production": {
+          "tsConfig": "libs/shared/data-access/tsconfig.lib.prod.json"
+        },
+        "development": {}
+      },
+      "defaultConfiguration": "production"
+    },
     "test": {
       "executor": "@nx/vitest:test",
       "outputs": ["{options.reportsDirectory}"],
