--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -28,6 +28,12 @@
             "glob": "**/*",
             "input": "apps/shell/public"
           },
+          "apps/shell/src/assets",
+          {
+            "glob": "workspace-config.json",
+            "input": "libs/shared/config/src/lib/assets",
+            "output": "/assets"
+          },
           {
             "glob": "module-federation.manifest.json",
             "input": "apps/shell",
