--- a/apps/remote-srm/tsconfig.json
+++ b/apps/remote-srm/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "es2022",
     "moduleResolution": "bundler",
     "emitDecoratorMetadata": false,
-    "module": "preserve"
+    "module": "esnext"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
