--- a/libs/shared/data-access/tsconfig.lib.json
+++ b/libs/shared/data-access/tsconfig.lib.json
@@ -5,7 +5,8 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "module": "es2022"
   },
   "include": ["src/**/*.ts"],
   "exclude": [
